--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <section class="search-section">
-            <input type="text" id="search" placeholder="Search for a song...">
+            <input type="text" id="search" placeholder="Search for a song..." />
             <button onclick="searchSongs()">Search</button>
         </section>
 
@@ -28,18 +28,17 @@
             <div class="song">
                 <h3>Song Title 1</h3>
                 <audio controls>
-                    <source src="https://res.cloudinary.com/your-account-name/video/upload/v12345678/song1.mp3" type="audio/mp3">
+                    <source src="https://firebasestorage.googleapis.com/v0/b/your-project-id.appspot.com/o/songs%2Fsong1.mp3?alt=media" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="song">
                 <h3>Song Title 2</h3>
                 <audio controls>
-                    <source src="https://res.cloudinary.com/your-account-name/video/upload/v12345678/song2.mp3" type="audio/mp3">
+                    <source src="https://firebasestorage.googleapis.com/v0/b/your-project-id.appspot.com/o/songs%2Fsong2.mp3?alt=media" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
-            <!-- Add more songs here -->
         </section>
     </main>
 
