--- a/index.html
+++ b/index.html
@@ -49,3 +49,7 @@
     <script src="assets/js/app.js"></script>
 </body>
 </html>
+<!-- Firebase SDK (modular) -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
