--- a/index.html
+++ b/index.html
@@ -53,3 +53,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
+<!-- Google Sign-In Button -->
+<button id="google-sign-in-button">Sign in with Google</button>
+
