--- a/index.html
+++ b/index.html
@@ -4,55 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpotMusic</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
 </head>
 <body>
-    <header>
-        <h1>SpotMusic</h1>
-        <nav>
-            <ul>
-                <li><a href="upload.html">Upload Song</a></li>
-                <li><a href="playlists.html">Your Playlists</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section class="search-section">
-            <input type="text" id="search" placeholder="Search for a song..." />
-            <button onclick="searchSongs()">Search</button>
-        </section>
+    <div class="container">
+        <h1>Welcome to SpotMusic</h1>
+        <p>Your one-stop platform for streaming music!</p>
 
-        <section class="song-list">
-            <h2>Featured Songs</h2>
-            <div class="song">
-                <h3>Song Title 1</h3>
-                <audio controls>
-                    <source src="https://firebasestorage.googleapis.com/v0/b/your-project-id.appspot.com/o/songs%2Fsong1.mp3?alt=media" type="audio/mp3">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="song">
-                <h3>Song Title 2</h3>
-                <audio controls>
-                    <source src="https://firebasestorage.googleapis.com/v0/b/your-project-id.appspot.com/o/songs%2Fsong2.mp3?alt=media" type="audio/mp3">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </section>
-    </main>
+        <!-- Google Sign-In Button -->
+        <button id="google-sign-in-button">Sign in with Google</button>
 
-    <footer>
-        <p>&copy; 2025 SpotMusic - All rights reserved.</p>
-    </footer>
+        <!-- Google Sign-Out Button (Hidden initially) -->
+        <button id="google-sign-out-button" style="display: none;">Sign out</button>
 
-    <script src="assets/js/app.js"></script>
+        <!-- User Info Section -->
+        <div id="user-info" style="display: none;">
+            <h3>Welcome, <span id="user-name"></span>!</h3>
+            <p>Your email: <span id="user-email"></span></p>
+        </div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="app.js"></script>
 </body>
 </html>
-<!-- Firebase SDK (modular) -->
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
-<!-- Google Sign-In Button -->
-<button id="google-sign-in-button">Sign in with Google</button>
-
